--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
 
   <body class="not-loaded">
-    <div class="night"></div>
+    <div class="night">
+      <h1 class="birthday-label">Happy Birthday Begum 🎂❤️</h1>
+    </div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
